--- a/style/main.css
+++ b/style/main.css
@@ -37,6 +37,18 @@ body {
     display: inline-block;
 }
 
+#drop_zone {
+    width: 80%;
+    height: 80%;
+    border-radius: 20px;
+    border: 2px dashed gray;
+    border-color: gray;
+    margin-left: 10%;
+    margin-top: 10%;
+    text-align: center;
+    line-height: 100px;
+}
+
 #map_pane {
     width: 73%;
     height: 100%;
