URL pln= for web flightplan, bearing in task list

--- a/help/help.css
+++ b/help/help.css
@@ -17,3 +17,16 @@ td {
 .nowrap {
     white-space: nowrap;
 }
+
+.code {
+    font-family: monospace;
+    font-size: small;
+}
+
+.inline {
+    display: inline-block;
+}
+
+li {
+    margin-bottom: 8px;
+}
