task list edit buttons, limits

--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,7 @@
 
 html {
     height: 100%;
+    box-sizing: border-box;
 }
 
 body {
@@ -55,10 +56,6 @@ body {
 
 #left_pane td {
     text-align: right;
-}
-
-#left_pane .task_wp_bearing {
-    padding-right: 25px;
 }
 
 #drop_zone {
@@ -154,10 +151,78 @@ body {
 #task_list {
     cursor: pointer;
     font-size: 16px;
+    width: 100%;
+    border-collapse: collapse;
 }
 
 .task_list_wp {
-    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+    height: 36px;
+}
+
+.task_list_wp:hover {
+    background-color: #cccc88;
+}
+
+.task_list_wp_current {
+    border: 4px solid yellow;
+    background-color: yellow;
+    height: 36px;
+}
+
+.task_list_wp:hover {
+    background-color: #cccc88;
+}
+
+.task_list_wp_index {
+    text-align: left;
+    font-size: 12px;
+    background-color: #e6ffff;
+    width: 1%;
+    white-space: nowrap;
+}
+
+.task_list_wp_name {
+    text-align: left;
+    background-color: #e6ffff;
+}
+
+.task_list_wp_bearing {
+    padding-right: 15px;
+}
+
+
+.task_list_wp_buttons {
+    width: 80px;
+}
+
+.task_list_wp_buttons div:hover { /* highlight buttons in red */
+    border: 2px solid red;
+}
+
+.task_list_wp_button_up {
+    display: inline-block;
+    width: 25px;
+    height: 30px;
+    background-image: url("../images/arrow_up.png");
+}
+
+.task_list_wp_button_down {
+    display: inline-block;
+    width: 25px;
+    height: 30px;
+    background-image: url("../images/arrow_down.png");
+}
+
+.task_list_wp_button_delete {
+    display: inline-block;
+    width: 25px;
+    height: 30px;
+    background-image: url("../images/delete.png");
+}
+
+.task_list_wp_limits {
+    font-size: 14px;
 }
 
 #task_list_distance {
