--- a/style/leaflet_mods.css
+++ b/style/leaflet_mods.css
@@ -6,3 +6,9 @@
 .leaflet-container {
     cursor: auto;
 }
+
+.leaflet-popup-content input {
+    border-style: solid;
+    border-width: 1px;
+    margin: 1px;
+}
