--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,40 @@ a {
 
 #buttons {
     margin-bottom: 4px;
+    position: relative;
+}
+
+/* ****************************** */
+/*  Search                        */
+/* ****************************** */
+
+#search {
+    position: relative;
+    display: inline;
+}
+
+#search_input {
+
+}
+
+#search_results {
+    position: absolute;
+    top: 20px;
+    left: 0px;
+    max-height: 600px;
+    overflow-y: scroll;
+    word-break: keep-all;
+    white-space: nowrap;
+    background-color: white;
+    border: 2px solid black;
+    z-index: 2000;
+    display: none;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.search_result {
+    cursor: pointer;
 }
 
 #panes {
