--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,13 @@ a {
 
 #buttons {
     margin-bottom: 4px;
+    margin-top: 2px;
     position: relative;
+}
+
+#help_button {
+    position: absolute;
+    right: 8px;
 }
 
 /* ****************************** */
@@ -60,14 +66,14 @@ a {
 
 #search_results {
     position: absolute;
-    top: 20px;
+    top: 24px;
     left: 0px;
     max-height: 600px;
-    overflow-y: scroll;
+    overflow-y: auto;
     word-break: keep-all;
     white-space: nowrap;
     background-color: white;
-    border: 2px solid black;
+    border: 1px solid black;
     z-index: 2000;
     display: none;
     padding-left: 10px;
@@ -76,6 +82,10 @@ a {
 
 .search_result {
     cursor: pointer;
+}
+
+.search_result:hover {
+    background-color: yellow;
 }
 
 #panes {
