--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,7 @@ a {
 }
 
 /* *************************************************** */
-/* ******* Task list elements    ********************* */
+/* ******* Task info elements    ********************* */
 /* *************************************************** */
 
 #task_info {
@@ -256,10 +256,6 @@ a {
     border: 4px solid yellow;
     background-color: yellow;
     height: 36px;
-}
-
-.task_info_wp:hover {
-    background-color: #cccc88;
 }
 
 .task_info_wp_index {
@@ -318,6 +314,49 @@ a {
     font-size: 24px;
     background-color: #d0d0d0;
     margin-right: 10px;
+}
+
+/* *************************************************** */
+/* ******* TrackLogs info elements    **************** */
+/* *************************************************** */
+
+#tracklogs_info {
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+    border-collapse: collapse;
+    display: none;
+}
+
+.tracklogs_info_entry {
+    border-top: 2px solid black;
+    height: 36px;
+}
+
+.tracklogs_info_entry:hover {
+    background-color: #cccc88;
+}
+
+.tracklogs_info_entry_current {
+    border: 4px solid yellow;
+    background-color: yellow;
+    height: 36px;
+}
+
+.tracklogs_info_entry_name {
+    text-align: left;
+    background-color: #e6ffff;
+}
+
+/* *************************************************** */
+/* ******* TrackLog info elements    ***************** */
+/* *************************************************** */
+
+#tracklog_info {
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+    display: none;
 }
 
 /* *************************************************** */
