--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,10 @@ a {
     line-height: 50px;
 }
 
+/* *************************************************** */
+/* ******* Right Pane            ********************* */
+/* *************************************************** */
+
 #right_pane {
     height: 100%; /* 100% or 75% depending on whether the baro is displayed */
     display: flex;
@@ -164,17 +168,12 @@ a {
     height: 100%;
 }
 
-#charts {
+#chart {
     width: 100%;
     height: 25%;
     margin-top: 3px;
     background-color: #aaaaaa;
     display: none;
-}
-
-.chart {
-    width: 100%;
-    height: 100%;
 }
 
 .menu {
@@ -333,10 +332,6 @@ a {
     height: 36px;
 }
 
-.tracklogs_info_entry:hover {
-    background-color: #cccc88;
-}
-
 .tracklogs_info_entry_current {
     border: 4px solid yellow;
     background-color: yellow;
@@ -346,6 +341,10 @@ a {
 .tracklogs_info_entry_name {
     text-align: left;
     background-color: #e6ffff;
+}
+
+.tracklogs_info_entry_name:hover {
+    background-color: #cccc88;
 }
 
 /* *************************************************** */
